@startuml

title __SRC's Class Diagram__\n

  namespace  {
    class Camera {
        - x : double
        - y : double
        + Camera()
        + getX()
        + getY()
    }
  }
  

  namespace  {
    class HelloWorld {
        ~ at : AnimationTimer
        ~ background : Image
        ~ backgroundView : ImageView
        ~ fuel : Image
        ~ fuelView : ImageView
        ~ hRotate : Rotate
        ~ indicator : Image
        ~ indicatorViewHorizontal : ImageView
        ~ indicatorViewVertical : ImageView
        ~ mainScene : Scene
        ~ meter : Image
        ~ meterViewHorizontal : ImageView
        ~ meterViewVertical : ImageView
        ~ root : Group
        ~ stage : Stage
        ~ vRotate : Rotate
        + HelloWorld()
        + render()
        + start()
    }
  }
  

  namespace  {
    class Rocket {
        - fuel : double
        - speedX : double
        - speedY : double
        + Rocket()
        + getFuel()
        + getSpeedX()
        + getSpeedY()
        + update()
    }
  }
  

  namespace  {
    class Sprite {
        ~ old_i : int
        - interFrameTime : double
        - interFrameX : int
        - numberOfFrame : int
        - offsetX : int
        - offsetY : int
        - sizeX : int
        - sizeY : int
        - spriteSheet : Image
        - spriteView : ImageView
        - x : double
        - y : double
        + Sprite()
        + getSpriteView()
        + getX()
        + getY()
        + update()
    }
  }
  

  HelloWorld -up-|> javafx.application.Application
  HelloWorld o-- Camera : camera
  HelloWorld o-- Rocket : rocket
  HelloWorld o-- Sprite : ufo
  Rocket -up-|> Sprite


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
